--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -23,8 +23,22 @@
     {
       "question": "what more ? ",
       "answer": "For IoT Solutions please call +2547-03-909-567"
+    },
+    {
+      "question": "",
+      "answer": ""
+    },
+    {
+      "question": "",
+      "answer": "hey"
+    },
+    {
+      "question": "hey to you",
+      "answer": "hey"
+    },
+    {
+      "question": "hey",
+      "answer": "hello"
     }
-
-
   ]
 }
